<resources>
    <string name="app_name">ft_hangouts</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">change color</string>
    <string name="save">Save</string>
    <string name="add_contact">Add Contact</string>
    <string name="send">send</string>
    <string name="delete">Delete</string>
    <string name="adress">adress</string>
    <string name="email">email</string>
    <string name="number">number</string>
    <string name="login">login</string>
    <string name="contact">Contact</string>
    <string name="edit">Edit</string>

</resources>
